# vnedreid_dorateam2025

./: .gitignore  README.md  package-lock.json
backend/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/alembic/versions/: 331e132652d8_fix_salary_amount.py  44935005ada2_fix_radar_table.py  68667ba41e14_initial.py  713e20c68063_add_resume_table.py  bd34ae6dff98_add_radar_table.py
backend/api/: settings.py
backend/api/clients/: openrouterai.py  orionsoftgpt.py
backend/api/orm/: base.py  filters_parser.py  models.py
backend/api/repo/: base.py  radar.py  resume.py  vacancies.py
backend/api/routes/: __init__.py  radar.py  resume.py  vacancies.py  vacancies_filters.py
backend/api/routes/schemas/: base.py  benifits.py  resume.py  vacancies.py
backend/api/services/: base.py  radar.py  resume.py  vacancies.py
backend/api/services/schemas/: base.py  radar.py  resume.py  vacancies.py
backend/api/utils/: dto.py  jwt_tool.py  token_validator.py
backend/psql_data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
backend/psql_data/base/16384/: 2615  2619  2684  2685  pg_internal.init
backend/psql_data/base/4/: 2619
backend/psql_data/base/5/: pg_internal.init
backend/psql_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
backend/psql_data/pg_stat/: pgstat.stat
frontend/: .stylelintrc.json  eslint.config.cjs  index.html  package-lock.json  package.json
frontend/.storybook/: preview.ts
frontend/src/: App.module.css  App.tsx  fonts.css  index.css  main.tsx
frontend/src/hooks/: useRadar.tsx  (+5 more)
(+31 files in other folders)
