[tool.poetry]
name = "vnedreid-backend"
version = "0.1.0"
description = ""
authors = ["dorateam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.16.1"
fastapi = {extras = ["standard"], version = "^0.115.12"}
pyjwt = "^2.10.1"
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
black = "^25.1.0"
openai = "^1.84.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
